# QDiscordAuth

./: CMakeLists.txt  aooauth.cpp  aooauth.h  main.cpp
